# rygel

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  COPYING.logo  ChangeLog  MAINTAINERS  Makefile.am  NEWS  README  README.md  TODO  autogen.sh  common.am  configure.ac  meson.build  meson_options.txt  release-plan.txt  rygel-1.0.pc.in  rygel-core-1.0.pc.in  rygel-core-2.0.pc.in  rygel-core-2.2.pc.in  rygel-core-2.4.pc.in  rygel-core-2.6.pc.in  rygel-core-2.8.pc.in  rygel-renderer-1.0.pc.in  rygel-renderer-2.0.pc.in  rygel-renderer-2.2.pc.in  rygel-renderer-2.4.pc.in  rygel-renderer-2.6.pc.in  rygel-renderer-2.8.pc.in  rygel-renderer-gst-2.0.pc.in  rygel-renderer-gst-2.2.pc.in  rygel-renderer-gst-2.4.pc.in  rygel-renderer-gst-2.6.pc.in  rygel-renderer-gst-2.8.pc.in  rygel-ruih-1.0.pc.in  rygel-ruih-2.0.pc.in  rygel-ruih-2.8.pc.in  rygel-server-2.0.pc.in  (+5 more)
data/: Makefile.am  configuration.yaml  meson.build  org.gnome.Rygel.Preferences.gresource.xml  org.gnome.Rygel1.service.in  rygel-default.conf  rygel-gstlaunch.conf  rygel-maemo.conf  rygel-maemo.schemas  rygel-preferences.desktop.in  rygel-preferences.desktop.in.in  rygel-preferences.ui  rygel.conf  rygel.desktop.in  rygel.desktop.in.in  rygel.schemas  rygel.service.in
data/icons/: Makefile.am
data/presets/: GstFaac.prs  GstFdkAacEnc.prs  GstLameMP3Enc.prs  GstMP4Mux.prs  GstOpenh264Enc.prs  GstTwoLame.prs  GstVaapiEncodeH264.prs  GstVaapiEncodeMpeg2.prs  GstVoAacEnc.prs  GstX264Enc.prs  avenc_aac.prs  avenc_mp2.prs  avenc_mpeg2video.prs  avenc_wmav1.prs  avenc_wmv1.prs  ffenc_aac.prs  ffenc_mp2.prs  ffenc_mpeg2video.prs  ffenc_wmav1.prs  ffenc_wmv1.prs  meson.build
data/xml/: AVTransport2.xml  AVTransport2.xml.in  BasicManagement2.xml.in  ConnectionManager.xml  ConnectionManager.xml.in  ContentDirectory-NoTrack.xml.in  ContentDirectory.xml  ContentDirectory.xml.in  EnergyManagement.xml.in  Makefile.am  MediaRenderer2.xml  MediaRenderer2.xml.in  MediaRenderer2.xml.in.in  MediaServer2.xml  MediaServer2.xml.in  MediaServer3.xml.in.in  RemoteUIServerService.xml.in  RenderingControl2.xml  RenderingControl2.xml.in  RuihServer2.xml.in.in  UIList.xml.in  X_MS_MediaReceiverRegistrar1.xml  X_MS_MediaReceiverRegistrar1.xml.in  description-xbox360.xml  description.xml  meson.build  process-xml.py
doc/: Makefile.am  README.BasicManagement  README.Mediathek  design.txt  meson.build
doc/man/: meson.build  rygel.conf.xml  rygel.rst  rygel.xml
doc/reference/: Makefile.am  doc-build.am  meson.build
doc/web/: architecture.rst  coding-style.rst  conf.py  conf.py.in  configuration.rst  development.rst  faq.rst  index.rst  integration.rst  media-server2.rst  meson.build  plugins.rst  system-integration.rst  troubleshooting.rst
examples/: Makefile.am  fullscreen-renderer.c  meson.build  mx-info  org.gnome.Rygel.FullscreenRenderer.gresource.xml  standalone-renderer-gst.c  standalone-renderer.c  standalone-ruih.c  standalone-server.c
examples/gi/: example-gst-renderer.py  example-renderer.py  example-server.py
examples/presets/: README  avenc_mpeg2video.prs
examples/renderer-plugins/: Makefile.am  meson.build
examples/server-plugins/: Makefile.am
examples/service/: README.Ubuntu  wrap-dbus
src/: Makefile.am  cstuff.c  cstuff.h  cstuff.vapi  gupnp-connection-manager.vala  gupnp-content-directory.c  gupnp-content-directory.h  gupnp-content-directory.vala  gupnp-media-manager.vala  gupnp-media-provider.vala  gupnp-media-receiver-registrar.c  gupnp-media-receiver-registrar.h  gupnp-media-receiver-registrar.vala  gupnp-media-server.c  gupnp-media-server.h  gupnp-media-server.vala  gupnp-media-tracker.c  gupnp-media-tracker.h  gupnp-media-tracker.vala  gupnp-metadata-extractor.vala  main.c  meson.build
src/librygel-core/: Makefile.am  agent-matcher.vala  dlna150-hacks.vala  filelist.am  meson.build  rygel-av-transport.vala  rygel-base-configuration.vala  rygel-basic-management-test-nslookup.vala  rygel-basic-management-test-ping.vala  rygel-basic-management-test-traceroute.vala  rygel-basic-management-test.vala  rygel-basic-management.vala  rygel-browse.vala  rygel-build-config.vapi  rygel-cmdline-config.vala  rygel-configuration.vala  rygel-connection-manager.vala  rygel-content-directory.vala  rygel-core-1.0.deps  rygel-core-2.4.deps  rygel-core-2.6.deps  rygel-core-2.8.deps  rygel-dbus-interface.vala  rygel-dbus-thumbnailer.vala  rygel-description-file.vala  rygel-dlna-profile.vala  rygel-energy-management-helper.c  rygel-energy-management-helper.vapi  rygel-energy-management.vala  rygel-environment-config.vala  rygel-free-desktop-interfaces.vala  rygel-http-get-handler.vala  rygel-http-get.vala  rygel-http-post.vala  rygel-icon-info.vala  rygel-import-resource.vala  rygel-item-creator.vala  rygel-item-removal-queue.vala  rygel-log-handler.vala  rygel-media-art-store.vala  (+28 more)
src/librygel-db/: Makefile.am  collate.c  database-cursor.vala  database.vala  (+5 more)
tests/: Makefile.am  meson.build  rygel-album-art-spec-test.vala  rygel-configuration.vala  rygel-data-sink_http-response.vala  rygel-data-source_http-response.vala  rygel-database-test.vala  rygel-dlna-profile.vala  rygel-environment-test.vala  rygel-gst-utils.vala  rygel-http-byte-seek-test.vala  rygel-http-byte-seek.vala  rygel-http-byte-seek_http-get.vala  rygel-http-get-test.vala  rygel-http-get.vala  rygel-http-gst-response-test.vala  rygel-http-gst-response.vala  rygel-http-gst-sink.vala  rygel-http-item-uri-test.vala  rygel-http-item-uri.vala  rygel-http-item-uri_http-post.vala  rygel-http-post-test.vala  rygel-http-post.vala  rygel-http-request_http-get.vala  rygel-http-request_http-post.vala  rygel-http-response-test.vala  rygel-http-response-test_gst-response.vala  rygel-http-response.vala  rygel-http-response_live-response.vala  rygel-http-seek_http-get.vala  rygel-http-seek_object-creator.vala  rygel-http-seekable-response-test.vala  rygel-http-seekable-response.vala  rygel-http-time-seek-test.vala  rygel-http-time-seek.vala  rygel-http-time-seek_http-get.vala  rygel-icon-info.vala  rygel-item-creator-test.vala  rygel-item-creator.vala  rygel-last-change-test.vala  (+25 more)
(+883 files in other folders)
